care/force-app/main/default/objects/Requisition_Form__c/Requisition_Form__c.object-meta.xml
<CustomObject>
    <label>Requisition Form</label>
    <nameField>
        <displayFormat>Req-{0000}</displayFormat>
        <label>Requisition Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requisition Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>