care/force-app/main/default/objects/Requisition_Form__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Shows the Name of the related Opportunity</description>
    <formula>Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Name of the related Opportunity</inlineHelpText>
    <label>Account</label>
    <type>Text</type>
</CustomField>