care/force-app/main/default/objects/Requisition_Form__c/fields/Blended_coverage_results__c.field-meta.xml
<CustomField>
    <fullName>Blended_coverage_results__c</fullName>
    <label>Blended coverage results</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>