care/force-app/main/default/objects/Requisition_Form__c/fields/Completion_Comments__c.field-meta.xml
<CustomField>
    <fullName>Completion_Comments__c</fullName>
    <label>Completion Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>