care/force-app/main/default/objects/Requisition_Form__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <defaultValue>TODAY() + 3</defaultValue>
    <description>Due Date</description>
    <inlineHelpText>Due Date</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>