care/force-app/main/default/objects/Requisition_Form__c/fields/Expected_completion_date__c.field-meta.xml
<CustomField>
    <fullName>Expected_completion_date__c</fullName>
    <defaultValue>IF($RecordType.Id  = &apos;012V00000000Jhp&apos;, TODAY(), null)</defaultValue>
    <description>Date of the expected Completion</description>
    <inlineHelpText>Date of the expected Completion</inlineHelpText>
    <label>Expected completion date</label>
    <type>Date</type>
</CustomField>