care/force-app/main/default/objects/Requisition_Form__c/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <inlineHelpText>Include states where the employees live.</inlineHelpText>
    <label>Geography</label>
    <type>TextArea</type>
</CustomField>