care/force-app/main/default/objects/Requisition_Form__c/fields/Geography_c__c.field-meta.xml
<CustomField>
    <fullName>Geography_c__c</fullName>
    <formula>Opportunity__r.Geographies__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geography</label>
    <type>Text</type>
</CustomField>