care/force-app/main/default/objects/Requisition_Form__c/fields/In_Center_Comments__c.field-meta.xml
<CustomField>
    <fullName>In_Center_Comments__c</fullName>
    <label>In-Center Results</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>