care/force-app/main/default/objects/Requisition_Form__c/fields/In_Center_Complete__c.field-meta.xml
<CustomField>
    <fullName>In_Center_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when the Zip Code file for In-Center has been attached to the record.</inlineHelpText>
    <label>In-Center Complete</label>
    <type>Checkbox</type>
</CustomField>