care/force-app/main/default/objects/Requisition_Form__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Field for Opportunity</description>
    <inlineHelpText>Shows the Opportunity</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Requisition Forms</relationshipLabel>
    <relationshipName>Requisition_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>