care/force-app/main/default/objects/Requisition_Form__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <inlineHelpText>Select the product you require a Zip Code File for.</inlineHelpText>
    <label>Products</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-Home</fullName>
            </value>
            <value>
                <fullName>In-Center</fullName>
            </value>
            <value>
                <fullName>In-Home/In-Center</fullName>
            </value>
            <value>
                <fullName>Preliminary contract</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>