care/force-app/main/default/objects/Requisition_Form__c/fields/Request_Comments__c.field-meta.xml
<CustomField>
    <fullName>Request_Comments__c</fullName>
    <inlineHelpText>Include helpful comments and special requests.</inlineHelpText>
    <label>Request Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>