care/force-app/main/default/objects/Requisition_Form__c/fields/Requested_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Completion_Date__c</fullName>
    <defaultValue>IF($RecordType.Id  = &apos;01270000000HpHx&apos;, TODAY() + 3, null)</defaultValue>
    <description>Set at least 3 days from today</description>
    <inlineHelpText>Please set this date at least 3 business days from today.</inlineHelpText>
    <label>Requested Completion Date</label>
    <type>Date</type>
</CustomField>