care/force-app/main/default/objects/Requisition_Form__c/recordTypes/Zip_Code_File.recordType-meta.xml
<RecordType>
    <fullName>Zip_Code_File</fullName>
    <active>true</active>
    <description>Zip Code File for Requisition Forms</description>
    <label>Zip Code File</label>
</RecordType>