care/force-app/main/default/objects/Requisition_Form__c/validationRules/In_Center_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>In_Center_Comments</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c,&quot;Complete&quot;), ISPICKVAL(Products__c,&quot;In-Center&quot;),ISBLANK(In_Center_Comments__c ))</errorConditionFormula>
    <errorDisplayField>In_Center_Comments__c</errorDisplayField>
    <errorMessage>Please add notes to the the In-Center Comments field before completing the requisition.</errorMessage>
</ValidationRule>