care/force-app/main/default/objects/Requisition_Form__c/validationRules/In_Center_Comments_In_Home_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>In_Center_Comments_In_Home_Comments</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c,&quot;Complete&quot;), ISPICKVAL(Products__c,&quot;In-Home/In-Center&quot;),OR(ISBLANK(In_Center_Comments__c ),ISBLANK(In_Home_Comments__c )))</errorConditionFormula>
    <errorMessage>Please add notes to both In-Center Comments and In-Center Home fields before completing the requisition.</errorMessage>
</ValidationRule>