care/force-app/main/default/objects/Requisition_Form__c/validationRules/In_Home_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>In_Home_Comments</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c,&quot;Complete&quot;), ISPICKVAL(Products__c,&quot;In-Home&quot;),ISBLANK(In_Home_Comments__c ))</errorConditionFormula>
    <errorDisplayField>In_Home_Comments__c</errorDisplayField>
    <errorMessage>Please add notes to the the In-Home Comments field before completing the requisition.</errorMessage>
</ValidationRule>