care/force-app/main/default/objects/Requisition_Form__c/validationRules/In_Home_In_Center.validationRule-meta.xml
<ValidationRule>
    <fullName>In_Home_In_Center</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Status__c,&quot;Complete&quot;) ,ISPICKVAL(Products__c,&quot;In-Home/In-Center&quot;), OR(In_Center_Complete__c = False, In_Home_Complete__c = False))</errorConditionFormula>
    <errorMessage>Both zip code files need to be completed before you can mark the requisition complete</errorMessage>
</ValidationRule>